# bibliotracker

./: .env.example  .gitignore  CLAUDE.md  README.md  fly.toml  pyproject.toml
.github/workflows/: unittest.yml
alembic/: env.py
alembic/versions/: 04ea97f1789a_remove_country_column.py  2961c55d25f3_add_is_fiction_column.py  cb1dd1bad822_add_is_owned_column.py
bibliotracker/: ai.py  app.py  config.py
bibliotracker/books/: google_books.py  service.py
bibliotracker/static/: index.html  script.js  stats.html  style.css
bibliotracker/storage/: client.py  models.py
book_wishlist_tracker/: ai.py  app.py  config.py
book_wishlist_tracker/books/: service.py
book_wishlist_tracker/static/: index.html  script.js  style.css
book_wishlist_tracker/storage/: client.py  models.py
books_wishlist_tracker/: ai.py  app.py
books_wishlist_tracker/books/: service.py
books_wishlist_tracker/static/: index.html  script.js  style.css
books_wishlist_tracker/storage/: client.py
hooks/: read_hook.py
tests/: conftest.py  test_api_response.py  test_app.py  test_books_service.py
